--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ var postr=document.createElement("p");
 var imgd=document.createElement("img");
 postr.textContent=ele;
 neww.innerHTML=null;
-neww.append(postr);
+
 //alert(ele);
 var txww="https://www.omdbapi.com/?t="+ ele +"&apikey=55039499";
 fetch(txww).then(function(res){
@@ -179,6 +179,9 @@ var plt=document.createElement("p");
 var rating=document.createElement("p");
 plt.textContent=res["Plot"];
 rating.textContent="IMDB rating is " +res["imdbRating"]+" out of " +res["imdbVotes"]+" votes";
+ if(res["imdbRating"]>8.5)
+    postr.textContent=" RECOMMENDED!" +postr.textContent;
+ neww.append(postr); 
 neww.append(imgd);
 neww.append(plt);
 neww.append(rating);
