--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ var rating=document.createElement("p");
 plt.textContent=res["Plot"];
 rating.textContent="IMDB rating is " +res["imdbRating"]+" out of " +res["imdbVotes"]+" votes";
  if(res["imdbRating"]>8.5)
-    postr.textContent=" RECOMMENDED!" +postr.textContent;
+    postr.textContent=" RECOMMENDED!  " +ele;
  neww.append(postr); 
 neww.append(imgd);
 neww.append(plt);
