--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@ grid-gap:10px;
 background-color:#0e0e0e;
 text-align:left;
 }
+ #det{
+  background-color:#0e0e0e;
+  color:white;
+ }
 .images{
 
 cursor:pointer;
